tests/baselines/reference/computedPropertyNamesContextualType10_ES5.errors.txt
computedPropertyNamesContextualType10_ES5.ts(5,12): error TS2322: Type '{ [x: number]: string | number; }' is not assignable to type 'I'.
  'number' index signatures are incompatible.
    Type 'string | number' is not assignable to type 'boolean'.
      Type 'string' is not assignable to type 'boolean'.


==== computedPropertyNamesContextualType10_ES5.ts (1 errors) ====
    interface I {
        [s: number]: boolean;
    }
    
    var o: I = {
               ~
        [+"foo"]: "",
    ~~~~~~~~~~~~~~~~~
        [+"bar"]: 0
    ~~~~~~~~~~~~~~~
    }
    ~
!!! error TS2322: Type '{ [x: number]: string | number; }' is not assignable to type 'I'.
!!! error TS2322:   'number' index signatures are incompatible.
!!! error TS2322:     Type 'string | number' is not assignable to type 'boolean'.
!!! error TS2322:       Type 'string' is not assignable to type 'boolean'.